added MyMPI files

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -15,6 +15,9 @@ print-list: print-list.o
 serial-add-list: serial-add-list.o
 	$(CC) $(LDFLAGS) -o serial-add-list serial-add-list.o 
 
+parallel-add-list: parallel-add-list.o
+	$(MCC) $(LDFLAGS) -o parallel-add-list parallel-add-list.o
+
 make-list.o: make-list.c
 	$(CC) $(CFLAGS) -c make-list.c
 
@@ -23,6 +26,9 @@ print-list.o: print-list.c
 
 serial-add-list.o: serial-add-list.c
 	$(CC) $(CFLAGS) -c serial-add-list.c
+
+parallel-add-list.o: parallel-add-list.c
+	$(MCC) $(CFLAGS) -c parallel-add-list.c
 
 clean:
 	rm -f $(PROGS) *.o core* *.dat
