--- a/lab1/makefile
+++ b/lab1/makefile
@@ -15,7 +15,7 @@ print-list: print-list.o
 serial-add-list: serial-add-list.o
 	$(CC) $(LDFLAGS) -o serial-add-list serial-add-list.o 
 
-parallel-add-list: parallel-add-list.o
+parallel-add-list: parallel-add-list.o MyMPI.o
 	$(MCC) $(LDFLAGS) -o parallel-add-list parallel-add-list.o
 
 make-list.o: make-list.c
@@ -27,8 +27,11 @@ print-list.o: print-list.c
 serial-add-list.o: serial-add-list.c
 	$(CC) $(CFLAGS) -c serial-add-list.c
 
-parallel-add-list.o: parallel-add-list.c
+parallel-add-list.o: parallel-add-list.c MyMPI.h
 	$(MCC) $(CFLAGS) -c parallel-add-list.c
+
+MyMPI.o: MyMPI.c MyMPI.h
+	$(MCC) $(CFLAGS) -c MyMPI.c
 
 clean:
 	rm -f $(PROGS) *.o core* *.dat
