--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,6 +1,5 @@
 CFLAGS = -g -Wall -Wstrict-prototypes
-PROGS = make-graph print-graph floyd-serial
-#serial-add-list parallel-add-list
+PROGS = make-graph print-graph floyd-serial floyd-parallel
 LDFLAGS = -lm
 CC = gcc
 MCC = mpicc
@@ -16,8 +15,8 @@ print-graph: print-graph.o graph.o
 floyd-serial: floyd-serial.o graph.o
 	$(CC) $(LDFLAGS) -o floyd-serial floyd-serial.o graph.o 
 
-# parallel-add-list: parallel-add-list.o MyMPI.o
-# 	$(MCC) $(LDFLAGS) -o parallel-add-list parallel-add-list.o MyMPI.o
+floyd-parallel: floyd-parallel.o MyMPI.o
+	$(MCC) $(LDFLAGS) -o floyd-parallel floyd-parallel.o MyMPI.o
 
 make-graph.o: make-graph.c graph.h
 	$(CC) $(CFLAGS) -c make-graph.c
@@ -28,8 +27,8 @@ print-list.o: print-graph.c graph.h
 floyd-serial.o: floyd-serial.c graph.h
 	$(CC) $(CFLAGS) -c floyd-serial.c
 
-# parallel-add-list.o: parallel-add-list.c MyMPI.h
-# 	$(MCC) $(CFLAGS) -c parallel-add-list.c
+floyd-parallel.o: floyd-parallel.c MyMPI.h
+	$(MCC) $(CFLAGS) -c floyd-parallel.c
 
 graph.o: graph.c graph.h
 	$(CC) $(CFLAGS) -c graph.c
@@ -38,4 +37,4 @@ MyMPI.o: MyMPI.c MyMPI.h
 	$(MCC) $(CFLAGS) -c MyMPI.c
 
 clean:
-	rm -f $(PROGS) *.o core* *.dat
+	rm -f $(PROGS) *.o core* *.dat *.seq
